  appropriate dependency (and include them directly via the include_path)
! imdb::alsoknow() messed things up on akas.imdb.com if AKA string contained
  only one term in parenthesis
* some W3C fixups to the demo pages
* cleanup of private class properties in class imdb (removing unreferenced
  ones, fixing initialization types, renaming some for clearer conventions)

v0.9.4 (31.03.2008)
-------------------
* getting rid of most (all?) of the PHP warnings/notices thrown
! tagline() method missed to exactly extract the tagline from the main page when
  the movie only contained one tagline
! fixed the season display in the demo page which sometimes was caught in an
  endless loop (the API itself was not affected)
+ added a drop-down box to the demo search page to select whether to search for
  a movie or an episode by the given name
* updated some API references to give a better description
* moved the IMDB_Request class to its own file (separate from the imdb_config)
! searching akas.imdb.com did not reveal localized akas; if we find them, they
  are now listed along with their language
* improved duplicate check on movie search (thanx to Alex)

v0.9.3 (25.03.2008)
-------------------
! fixed some incorrect calls to strrpos causing PHP error messages
* changing default imdb site from us.imdb.com to akas.imdb.com to also find
  localized AKAs
+ new method movieconnection() returns connected movies (mid, name, year and
  maybe comment)
+ new method extReviews() returns external reviews for this movie (url,desc)
* some code cleanup, optimization and comments
* minor optical enhancements to the demo pages
+ imdbsearch class: added method search_episodes to restrict the search to
  either movies or episodes (before it was always restricted to movies)

v0.9.2 (13.03.2008)
-------------------
* replacing strpos..substr loops in several functions by preg_match_all constructs
! runtime was broken for some movies (errors on the IMDB pages?)